samples/_failures_safe/1761071610_a4850f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e1a2d63.c: In function ‘main’:
./samples/SAFE/__tmp_3e1a2d63.c:147:5: error: expected expression at end of input
  147 |     add_edge(&g, 0,
      |     ^~~~~~~~
./samples/SAFE/__tmp_3e1a2d63.c:147:5: error: expected declaration or statement at end of input
